Fixed Header overflow on mobile

--- a/app/components/Header/Header.module.scss
+++ b/app/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     position: absolute;
-    z-index: 102;
+    z-index: 105;
     width: 100%;
     display: flex;
     justify-content: space-between;
